--- a/portfolio/src/app/components/header/header.component.html
+++ b/portfolio/src/app/components/header/header.component.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+<section class="header">
+    <div class="title">
+        <p>Belén Castelli Gubiotti</p>
+    </div>
+    <nav class="nav">
+        <ul>
+            <li>Sobre mí</li>
+            <li>Tecnologías</li>
+            <li>Proyectos</li>
+            <li>Contacto</li>
+        </ul>
+    </nav>
+
+</section>
