--- a/portfolio/src/app/components/header/header.component.css
+++ b/portfolio/src/app/components/header/header.component.css
@@ -1,8 +1,10 @@
 .header {
     width: 100%;
-    height: 120px;
+    height: 140px;
+    padding: 20px;
 
     display: flex;
+    gap: 50px;
     position: fixed;
     top: 0px;
 
@@ -22,12 +24,14 @@
 }
 
 .title{
-    width: 35%;
+    width: 40%;
     justify-content: center;
 }
 
+.title p {text-align: center;}
+
 .nav {
-    width: 65%;
+    width: 60%;
 }
 
 .nav ul {
@@ -38,7 +42,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 70px;
+    column-gap: 70px;
 
     list-style: none;
 }
