--- a/portfolio/src/app/pages/home/home.component.html
+++ b/portfolio/src/app/pages/home/home.component.html
@@ -58,13 +58,97 @@
 
     </section>
 
-
-    
     <section class="about">
-    
+        <div class="titleAbout">
+            <h4>Sobre mí</h4>
+        </div>
+        <div class="photoAb">
+            <img src="../../../assets/images/WEEB_BEIVA__7381-removebg-preview(1) 1.png" alt="Foto about BelenCastelli" id="photoAbout">
+        </div>
+        <div class="description">
+            <p>Soy una apasionada por la tecnología y el aprendizaje continuo. Me destaco por  mis habilidades analíticas y comunicativas, disfruto creando soluciones  innovadoras y colaborando en equipos multidisciplinarios.</p>
+            <p>Fuera del trabajo, disfruto del senderismo, la lectura, los videojuegos y pasar tiempo con mi familia y amigos</p>
+        </div>
+        
     </section>
     
     <section class="technologies">
+        <div class="techContainer">
+            <div class="titleTech start">
+                <h4>< Tecnologías ></h4>
+            </div>
+            <div class="techs">
+                <div class="frontend">
+                    <div>
+                        <img src="../../../assets/images/techs/icons8-html-144 1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="../../../assets/images/techs/icons8-css-144 1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="../../../assets/images/techs/icons8-js-144 1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="../../../assets/images/techs/icons8-mecanografiado-144 1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="../../../assets/images/techs/icons8-angularjs-144 1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="../../../assets/images/techs/icons8-oreja-144 1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="../../../assets/images/techs/image 3.png" alt="">
+                    </div>
+                    <div>
+                        <img src="../../../assets/images/techs/image 4.png" alt="">
+                    </div>
+
+              
+                </div>
+                <div class="backend">
+                    <div>
+                        <img src="../../../assets/images/techs/icons8-nodo-js-144 1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="../../../assets/images/techs/icons8-expresar-js-144 1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="../../../assets/images/techs/icons8-mysql-an-open-source-relational-database-management-system-96 1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="../../../assets/images/techs/icons8-mongodb-a-cross-platform-document-oriented-database-program-96 1.png" alt="">
+                    </div>
+                    <div>             
+                        <img src="../../../assets/images/techs/icons8-ngp-144 1.png" alt="">
+                    </div>
+                </div>
+                <div class="tools">
+                    <div>
+                        <img src="../../../assets/images/techs/icons8-git-144 1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="../../../assets/images/techs/icons8-github-128 1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="../../../assets/images/techs/icons8-figma-96 1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="../../../assets/images/techs/icons8-estudio-visual-144 1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="../../../assets/images/techs/icons8-amazon-web-services-144(1) 1.png" alt="">
+                    </div>
+                    <div>
+                        <img src="../../../assets/images/techs/image 5.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="titleTech end">
+                <h4>< / Tecnologías ></h4>
+            </div>
+        </div>
+        
     
     </section>
     
