--- a/portfolio/src/app/pages/home/home.component.css
+++ b/portfolio/src/app/pages/home/home.component.css
@@ -159,13 +159,119 @@
 .about{
     height: 650px;
     background-color: #e0cec2;
+
+
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+
+}
+
+.titleAbout{
+    background-image: linear-gradient(to right, #664900, #A67700, #A67700, #A67700, #664900);
+    padding: 10px;
+    border-radius: 15px;
+    width: 200px;
+}
+
+.titleAbout h4, .titleTech h4{
+    font-size: 20pt;
+    color: #e0cec2;
+    text-align: center;
+}
+
+.photoAb, .description{
+    border: solid black 2px;
+    border-radius: 15px;
+}
+.photoAb img{
+    filter: drop-shadow(20px 0px 10px rgba(0, 0, 0, 0.3));
+}
+
+.description{
+    width: 30%;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.description p {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+
 }
 
 /* Technologies */
 .technologies{
-    height: 850px;
-    background-color: #070420;;
+    height: 775px;
+    background-color: #070420;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.techContainer{
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+.titleTech{
+    font-family: 'Courier New', Courier, monospace;
+    color: #e0cec2;
+    background-image: linear-gradient(to right, #16203F, #0B59B1, #0A2F5B);
+    padding: 10px;
+    border-radius: 15px;
+}
+.start{
+    align-self: flex-start;
+}
+
+.end{
+    align-self: flex-end;
+}
+
+.techs{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.frontend, .backend, .tools{
+    width: 30%;
+    height: 500px;
+    border: solid #579DF2 2px;
+    padding: 10px;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.frontend{
+    box-shadow: -20px 20px 20px 1px #579DF2;
+    gap: 7px;
+}
+
+.backend{
+    box-shadow: 0px 20px 20px 1px #579DF2;
+    gap: 15px;
+}
+
+.tools{
+    box-shadow: 20px 20px 20px 1px #579DF2;
+    gap: 17px;
+}
+
+
 /* proyects */
 .projects{
     height: 1500px;
