--- a/portfolio/src/app/pages/home/home.component.html
+++ b/portfolio/src/app/pages/home/home.component.html
@@ -79,81 +79,128 @@
             </div>
             <div class="techs">
                 <div class="frontend">
-                    <div>
-                        <img src="../../../assets/images/techs/icons8-html-144 1.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/icons8-html-144 1.png" alt="" class="imgIcon">
                     </div>
-                    <div>
-                        <img src="../../../assets/images/techs/icons8-css-144 1.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/icons8-css-144 1.png" alt="" class="imgIcon">
                     </div>
-                    <div>
-                        <img src="../../../assets/images/techs/icons8-js-144 1.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/icons8-js-144 1.png" alt="" class="imgIcon">
                     </div>
-                    <div>
-                        <img src="../../../assets/images/techs/icons8-mecanografiado-144 1.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/icons8-mecanografiado-144 1.png" alt="" class="imgIcon">
                     </div>
-                    <div>
-                        <img src="../../../assets/images/techs/icons8-angularjs-144 1.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/icons8-angularjs-144 1.png" alt="" class="imgIcon">
                     </div>
-                    <div>
-                        <img src="../../../assets/images/techs/icons8-oreja-144 1.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/icons8-oreja-144 1.png" alt="" class="imgIcon">
                     </div>
-                    <div>
-                        <img src="../../../assets/images/techs/image 3.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/image 3.png" alt="" class="imgIcon">
                     </div>
-                    <div>
-                        <img src="../../../assets/images/techs/image 4.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/image 4.png" alt="" class="imgIcon">
                     </div>
 
-              
                 </div>
                 <div class="backend">
-                    <div>
-                        <img src="../../../assets/images/techs/icons8-nodo-js-144 1.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/icons8-nodo-js-144 1.png" alt="" class="imgIcon">
                     </div>
-                    <div>
-                        <img src="../../../assets/images/techs/icons8-expresar-js-144 1.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/icons8-expresar-js-144 1.png" alt="" class="imgIcon">
                     </div>
-                    <div>
-                        <img src="../../../assets/images/techs/icons8-mysql-an-open-source-relational-database-management-system-96 1.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/icons8-mysql-an-open-source-relational-database-management-system-96 1.png" alt="" class="imgIcon">
                     </div>
-                    <div>
-                        <img src="../../../assets/images/techs/icons8-mongodb-a-cross-platform-document-oriented-database-program-96 1.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/icons8-mongodb-a-cross-platform-document-oriented-database-program-96 1.png" alt="" class="imgIcon">
                     </div>
-                    <div>             
-                        <img src="../../../assets/images/techs/icons8-ngp-144 1.png" alt="">
+                    <div class="iconTech">             
+                        <img src="../../../assets/images/techs/icons8-ngp-144 1.png" alt="" class="imgIcon">
                     </div>
                 </div>
                 <div class="tools">
-                    <div>
-                        <img src="../../../assets/images/techs/icons8-git-144 1.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/icons8-git-144 1.png" alt="" class="imgIcon">
                     </div>
-                    <div>
-                        <img src="../../../assets/images/techs/icons8-github-128 1.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/icons8-github-128 1.png" alt="" class="imgIcon">
                     </div>
-                    <div>
-                        <img src="../../../assets/images/techs/icons8-figma-96 1.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/icons8-figma-96 1.png" alt="" class="imgIcon">
                     </div>
-                    <div>
-                        <img src="../../../assets/images/techs/icons8-estudio-visual-144 1.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/icons8-estudio-visual-144 1.png" alt="" class="imgIcon">
                     </div>
-                    <div>
-                        <img src="../../../assets/images/techs/icons8-amazon-web-services-144(1) 1.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/icons8-amazon-web-services-144(1) 1.png" alt="" class="imgIcon">
                     </div>
-                    <div>
-                        <img src="../../../assets/images/techs/image 5.png" alt="">
+                    <div class="iconTech">
+                        <img src="../../../assets/images/techs/image 5.png" alt="" class="imgIcon">
                     </div>
                 </div>
             </div>
             <div class="titleTech end">
                 <h4>< / Tecnologías ></h4>
             </div>
-        </div>
-        
-    
+        </div> 
     </section>
     
     <section class="projects">
-    
+        <div class="projectsContainer">
+            <div class="titleProyects start">
+                <h4>< Proyectos ></h4>
+            </div>
+            <div class="bodyProjects">
+                <div class="magyDeck">
+                    <div class="aboutMagydeck">
+                        <div class="titleMagydeck">
+                            <h5>MagyDeck</h5>
+                        </div>
+                        <div class="descriptionMagydeck">
+                            <p>Aplicación Web para enriquecer la experiencia de juego de cartas Magic: The Gathering.</p>
+                            <br>
+                            <p>Construida con Angular, esta aplicación aprovecha una API REST externa  (Scryfall) para ofrecer datos actualizados sobre las cartas. Además,  utiliza una base de datos relacional (MySQL) para gestionar la información  pertienente</p>
+                        </div>
+                        <div class="socialMagydeck">
+                            <div class="iconMagy">
+                                <img src="../../../assets/images/projects/Link.png" alt="" class="linkMagy">
+                            </div>
+                            <!-- <div class="iconMagy">
+                                <img src="../../../assets/images/projects/Trial.png" alt="" class="linkMagy">
+                            </div> -->
+                            <div class="iconMagy">
+                                <img src="../../../assets/images/projects/GitHub.png" alt="" class="linkMagy">
+                            </div>
+                            <div class="iconMagy">
+                                <img src="../../../assets/images/projects/GitHub.png" alt="" class="linkMagy">
+                            </div>
+                        </div>
+                        <div class="videoMagy">
+                            <iframe width="320" src="https://www.youtube.com/embed/kQP7XOjJazs?si=jEkZ1qtkKKJ0unS9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        </div>
+                        
+                        
+                        
+                    </div>
+                    <div class="photoMagydeck">
+
+                            <img src="../../../assets/images/projects/foto magydeck.png" alt="" id="imgMagy">
+                        
+                    </div>
+                </div>
+                <div class="otherProjs">
+                    <app-projects></app-projects>
+                </div>
+            </div>
+            <div class="titleProyects end">
+                <h4>< / Proyectos ></h4>
+            </div>
+
+        </div>
     </section>
     
     <section class="contact">
