--- a/portfolio/src/app/pages/home/home.component.html
+++ b/portfolio/src/app/pages/home/home.component.html
@@ -158,7 +158,7 @@
                 <div class="magyDeck">
                     <div class="aboutMagydeck">
                         <div class="titleMagydeck">
-                            <h5>MagyDeck</h5>
+                            <h4>MagyDeck</h4>
                         </div>
                         <div class="descriptionMagydeck">
                             <p>Aplicación Web para enriquecer la experiencia de juego de cartas Magic: The Gathering.</p>
@@ -183,8 +183,7 @@
                             <iframe width="320" src="https://www.youtube.com/embed/kQP7XOjJazs?si=jEkZ1qtkKKJ0unS9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                         
-                        
-                        
+                
                     </div>
                     <div class="photoMagydeck">
 
@@ -193,7 +192,10 @@
                     </div>
                 </div>
                 <div class="otherProjs">
-                    <app-projects></app-projects>
+                    <div *ngFor="let project of projects">
+                        <app-projects [project] = 'project' ></app-projects>
+                    </div>
+                    
                 </div>
             </div>
             <div class="titleProyects end">
