--- a/portfolio/src/app/components/projects/projects.component.css
+++ b/portfolio/src/app/components/projects/projects.component.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
 
     padding: 15px;
     width: 400px;
