css fix projects

--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -4,7 +4,7 @@
     }">
         <h4>{{project.title}}</h4>
     </div>
-    <div>
+    <div class="textProjs">
         <p>{{project.description}}</p>
         <p>{{project.techs}}</p>
     </div>
