--- a/portfolio/src/app/pages/home/home.component.html
+++ b/portfolio/src/app/pages/home/home.component.html
@@ -167,16 +167,16 @@
                         </div>
                         <div class="socialMagydeck">
                             <div class="iconMagy">
-                                <img src="../../../assets/images/projects/Link.png" alt="" class="linkMagy">
+                                <a href="https://magy-deck.vercel.app/" target="_blank"><img src="../../../assets/images/projects/Web.png" alt="" class="linkMagy web"></a>
                             </div>
                             <!-- <div class="iconMagy">
                                 <img src="../../../assets/images/projects/Trial.png" alt="" class="linkMagy">
                             </div> -->
                             <div class="iconMagy">
-                                <img src="../../../assets/images/projects/GitHub.png" alt="" class="linkMagy">
+                               <a href="https://github.com/naopeke/MagyDeck" target="_blank"> <img src="../../../assets/images/projects/GitHub.png" alt="" class="linkMagy github"></a>
                             </div>
                             <div class="iconMagy">
-                                <img src="../../../assets/images/projects/GitHub.png" alt="" class="linkMagy">
+                                <a href="https://github.com/naopeke/MagyDeck_API" target="_blank"><img src="../../../assets/images/projects/GitHub.png" alt="" class="linkMagy github"></a>
                             </div>
                         </div>
                         <div class="videoMagy">
@@ -186,9 +186,10 @@
                 
                     </div>
                     <div class="photoMagydeck">
-
+                        <div class="imgMagyCont">
                             <img src="../../../assets/images/projects/foto magydeck.png" alt="" id="imgMagy">
-                        
+                        </div>
+                            
                     </div>
                 </div>
                 <div class="otherProjs">
