--- a/portfolio/src/app/components/projects/projects.component.css
+++ b/portfolio/src/app/components/projects/projects.component.css
@@ -2,11 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: end;
+    justify-content: space-between;
+    gap: 15px;
+    /* justify-content:flex-end; */
 
     padding: 15px;
-    width: 400px;
-    height: 350px;
+    width: 430px;
+    height: 400px;
 
     border: solid black 2px;
     border-radius: 15px;
@@ -17,7 +19,9 @@
     border-radius: 15px;
     height: 50px;
     width: 180px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .titleP h4{
@@ -42,4 +46,5 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
+    border-radius: 15px;
 }
