--- a/portfolio/src/app/pages/home/home.component.html
+++ b/portfolio/src/app/pages/home/home.component.html
@@ -207,6 +207,62 @@
     </section>
     
     <section class="contact">
-    
+        <div class="contactContainer">
+            <div class="titleTech start">
+                <h4>< Contacto ></h4>
+            </div>
+            <div class="contacSection">
+                <div>
+                    <p>Tu opinión es importante para mí. Si tienes alguna consulta, propuesta de colaboración o simplemente quieres decir “hola”, estaré encantada de recibir tu mensaje.</p>
+                </div>
+                <div>
+                    <div>
+                        <div>
+                            <img src="../../../assets/images/contact/BEIVA7550 1.png" alt="">
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <p>Puedes contarme mediante:</p>
+                        </div>
+                        <div>
+                            <div>
+                                <div>
+                                    <a href="mailto:mariabelencastelli29@gmail.com?subject=Asunto del correo&body=Cuerpo del mensaje">
+                                    <img src="../../../assets/images/contact/Gmail Logo.png" alt=""></a>
+                                </div>
+                                <div>
+                                    <p>mariabelencastelli29@gmail.com</p>
+                                </div>
+                            </div>
+                            <div>
+                                <div>
+                                    <img src="../../../assets/images/contact/Phone.png" alt="">
+                                </div>
+                                <div>
+                                    <p>+34 660 79 11 65</p>
+                                </div>
+                            </div>
+                            <div>
+                                <div>
+                                    <img src="../../../assets/images/contact/LinkedIn.png" alt="">
+                                </div>
+                                <div>
+                                    <p>www.linkedin.com/in/belén-castelli-gubiotti-34b111263/</p>
+                                </div>
+                            </div>
+                        </div>
+                        
+
+   
+                    </div>
+                </div>
+            </div>
+            <div class="titleTech end">
+                <h4>< / Contacto ></h4>
+            </div>
+
+        </div>
     </section>
+    
 </main>
