--- a/portfolio/src/app/pages/home/home.component.html
+++ b/portfolio/src/app/pages/home/home.component.html
@@ -212,44 +212,36 @@
                 <h4>< Contacto ></h4>
             </div>
             <div class="contacSection">
-                <div>
-                    <p>Tu opinión es importante para mí. Si tienes alguna consulta, propuesta de colaboración o simplemente quieres decir “hola”, estaré encantada de recibir tu mensaje.</p>
+                <div class="opinion">
+                    <p>Si tienes alguna consulta, propuesta de colaboración o simplemente quieres decir “hola”, estaré encantada de recibir tu mensaje.</p>
                 </div>
-                <div>
-                    <div>
+                <div class="infoContainer">
+                    <div class="imgContact">
                         <div>
                             <img src="../../../assets/images/contact/BEIVA7550 1.png" alt="">
                         </div>
                     </div>
-                    <div>
-                        <div>
-                            <p>Puedes contarme mediante:</p>
+                    <div class="infoContact">
+                        <div class="textContact">
+                            <p>Puedes contactarme mediante:</p>
                         </div>
-                        <div>
-                            <div>
-                                <div>
+                        <div class="socialNet">
+                            <div class="howContact">
+
                                     <a href="mailto:mariabelencastelli29@gmail.com?subject=Asunto del correo&body=Cuerpo del mensaje">
-                                    <img src="../../../assets/images/contact/Gmail Logo.png" alt=""></a>
-                                </div>
-                                <div>
+                                    <img src="../../../assets/images/contact/Gmail Logo.png" width="40px" alt=""></a>
+
+                 
                                     <p>mariabelencastelli29@gmail.com</p>
-                                </div>
+                        
                             </div>
-                            <div>
-                                <div>
-                                    <img src="../../../assets/images/contact/Phone.png" alt="">
-                                </div>
-                                <div>
+                            <div  class="howContact">
+                                    <img src="../../../assets/images/contact/Phone.png "width="40px" alt="">
                                     <p>+34 660 79 11 65</p>
-                                </div>
                             </div>
-                            <div>
-                                <div>
-                                    <img src="../../../assets/images/contact/LinkedIn.png" alt="">
-                                </div>
-                                <div>
+                            <div  class="howContact">
+                                    <img src="../../../assets/images/contact/LinkedIn.png" width="40px" alt="">
                                     <p>www.linkedin.com/in/belén-castelli-gubiotti-34b111263/</p>
-                                </div>
                             </div>
                         </div>
                         
