--- a/portfolio/src/app/components/projects/projects.component.css
+++ b/portfolio/src/app/components/projects/projects.component.css
@@ -4,28 +4,34 @@
     align-items: center;
     justify-content: space-between;
     gap: 15px;
-    /* justify-content:flex-end; */
 
     padding: 15px;
-    width: 430px;
-    height: 400px;
+    width: 400px;
+    height: 430px;
 
-    border: solid black 2px;
     border-radius: 15px;
+    border: solid black 2px;
     font-family: monospace;
 }
+
+.otherTi{
+    display: flex;
+    gap: 10px;
+}
 .titleP{
-    padding: 10px;
     border-radius: 15px;
-    height: 50px;
+    height: 40px;
     width: 180px;
     display: flex;
     justify-content: center;
     align-items: center;
+    border: solid black 2px;
 }
 
 .titleP h4{
+    padding-top: 4px;
     font-size: 14pt;
+    text-align: center;
 }
 .titleProject{
     background-color: #5C3D1D ;
@@ -39,12 +45,17 @@
     background-color: black;
     color: white;
 }
-.imgProject{
-    justify-self: flex-end;
+
+.github:hover{
+    border-radius: 502px;
+    box-shadow: 0px 0px 10px 2px white;
+    transform: scale(1.1);
 }
+
+
 .imgP{
     height: 100%;
-    width: 100%;
+    /* width: 100%; */
     object-fit: cover;
     border-radius: 15px;
 }
